# personal_website

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.css  index.html  justfile
addons/: Cargo.toml
addons/src/: animated_custom_error_boundary.rs  animated_show_switch.rs  animated_suspense.rs  custom_error_boundary.rs  delayed_value.rs  lib.rs  queued_value.rs
assets/: about_article.md  test_article.md
bin_init/: Cargo.toml
bin_init/src/: fileserv.rs  handle_leptos.rs  main.rs
front/: Cargo.toml
front/app/: Cargo.toml
front/app/src/: lib.rs  master_pages.rs
front/app/src/master_pages/: works_page.rs
front/init/: Cargo.toml
front/src/: animated_suspense.rs  error_page.rs  index.css  lib.rs  routes.rs
front/src/master_pages/: about_page.rs  home_page.rs  works_page.rs
front/src/routes/: about.rs  home.rs  playground.rs  work.rs  works.rs
front/ui_kit/src/: lib.rs
front/ui_kit/src/widgets/: header.rs
init/: Cargo.toml
init/src/: fileserv.rs  handle_leptos.rs  lib.rs  main.rs
lib_init/: Cargo.toml
lib_init/src/: lib.rs
server/: Cargo.toml
server/src/: api.rs  article_parser.rs  error.rs  lib.rs  main.rs  state.rs
server/src/api/: article.rs  error.rs  fetch_article.rs  fetch_foo.rs  fetch_preview.rs  foo.rs
src/: index.css  lib.rs  main.rs  master_page.rs
src/master_page/: about_page.rs  contact_page.rs  home_page.rs  works_page.rs
ui_kit/: Cargo.toml
ui_kit/src/: article.css  article.rs  feed.css  feed.rs  header.css  header.rs  index.css  lib.rs  tagline.css  tagline.rs  typewritter.css  typewritter.rs  widgets.rs
ui_kit/src/widgets/: buttons.css  buttons.rs  header.css  header.rs
