[package]
name = "personal_website"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Alekseev"]
repository = "https://github.com/solweo/personal_website"

[dependencies]
leptos = { version = "0.6.11", features = ["nightly", "csr"] }
leptos_router = { version = "0.6.11", features = ["nightly", "csr"] }
leptos_meta = { version = "0.6.11", features = ["nightly", "csr"] }
leptos-use = "0.10.7"
stylance = { version = "0.3.0", features = ["nightly"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
uuid = { version = "1", features = ["v4"] }
console_error_panic_hook = "0.1.7"
console_log = "1"
log = "0.4"
ui_kit = { path = "./ui_kit"}
pulldown-cmark = "0.10.3"

[package.metadata.stylance]
output_file = "./target/stylance-output/bundle.css"
output_dir = "./target/"
extensions = [".css"]
folders = ["./src", "./ui_kit"]
class_name_pattern = "[name]"

[workspace]
resolver = "2"
members = [
  # utilities 

  # core
  "ui_kit",

  # integrations

  # libraries
]
exclude = ["works"]

[workspace.package]
version = "0.1.0"