# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "bin_init",
    "server",
    "lib_init",
    "front",
    "ui_kit",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = { version = "0.6", features = ["nightly"] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
leptos_axum = { version = "0.6" }

axum = "0.7"
cfg-if = "1"
console_error_panic_hook = "0.1.7"
console_log = "1"
http = "1"
log = "0.4.20"
simple_logger = "5"
thiserror = "1"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
wasm-bindgen = "=0.2.92"
yaml-front-matter = "0.1.0"

leptos-use = "0.10.7"
stylance = { version = "0.5.0", features = ["nightly"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
uuid = { version = "1", features = ["v4"] }
comrak = "0.24.1"

serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
gloo-net = { version = "0.5", features = ["http"] }
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.4.0"
bcrypt = "0.15"
async-trait = "0.1"

[[workspace.metadata.stylance]]
output_file = "../target/stylance-output/bundle.css"
output_dir = "../target/"
extensions = [".css"]
folders = ["../front", "../ui_kit"]
class_name_pattern = "[name]"

# See https://github.com/akesson/cargo-leptos for documentation of all the parameters.
[[workspace.metadata.leptos]]
name = "site"
bin-package = "bin_init"
lib-package = "lib_init"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
