[workspace]
resolver = "2"
members = [
    "init",
    "server",
    "front",
    "ui_kit",
    "addons",
]

[workspace.dependencies]
# bare minimum for "init"
axum = { version = "0.7", features = ["macros"] }
console_error_panic_hook = "0.1"
leptos = { version = "0.6", features = ["nightly"] }
leptos_axum = { version = "0.6" }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = { version = "0.5" }
tower-http = { version = "0.5", features = ["fs"] }
wasm-bindgen = "0.2.93"
thiserror = "1"
tracing = { version = "0.1" }
http = "1"
# bare minimum for server
cfg-if = "1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4.20"
comrak = "0.24.1"
yaml-front-matter = "0.1.0"
# bare minimum for front
leptos_macro = { version = "0.6" }
leptos_reactive = { version = "0.6" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos-use = "0.13.5"
stylance = { version = "0.5.1", features = ["nightly"] }
# additional
simple_logger = "5"
itertools = "0.13.0"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

# See https://github.com/akesson/cargo-leptos for documentation of all the parameters.
[[workspace.metadata.leptos]]
name = "site"
bin-package = "init"
bin-features = ["ssr"]
bin-default-features = false
lib-package = "init"
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
output-name = "site"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3002
browserquery = "defaults"
env = "DEV"