[package]
name = "addons"
version = "0.1.0"
edition = "2021"
description = "A collection of custom basic Leptos's components"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_reactive.workspace = true
leptos_macro.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

leptos-use.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate", 
    "leptos_meta/hydrate", 
    "leptos_router/hydrate",
    "leptos_reactive/hydrate",
    "leptos_macro/hydrate",
]
ssr = [
    "leptos/ssr", 
    "leptos-use/ssr", 
    "leptos-use/axum", 
    "leptos_meta/ssr", 
    "leptos_router/ssr",
    "leptos_reactive/ssr",
    "leptos_macro/ssr",
    "dep:leptos_axum"
]