[package]
name = "bin_init"
version = "0.1.0"
edition = "2021"

[dependencies]
front = { path = "../front", default-features = false, features = ["ssr"] }
server = { path = "../server", default-features = false, features = ["ssr"] }

leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
reqwest.workspace = true
