[package]
name = "front"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
ui_kit = { path = "../ui_kit" }
addons = { path = "../addons" }
server = { path = "../server" }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_macro.workspace = true
leptos_reactive.workspace = true
gloo-timers.workspace = true
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
leptos-use.workspace = true
stylance.workspace = true
log.workspace = true

[package.metadata.stylance]
output_file = "../target/stylance-output/front.css"
output_dir = "../target/"
extensions = [".css"]
class_name_pattern = "[name]"

[features]
default = []
hydrate = [
    "leptos/hydrate", 
    "leptos_meta/hydrate", 
    "leptos_router/hydrate",
    "leptos_reactive/hydrate",
    "leptos_macro/hydrate",
    "ui_kit/hydrate",
    "addons/hydrate",
    "server/hydrate",
]
ssr = [
    "leptos/ssr", 
    "leptos-use/ssr", 
    "leptos-use/axum", 
    "leptos_meta/ssr", 
    "leptos_router/ssr", 
    "leptos_reactive/ssr",
    "leptos_macro/ssr",
    "dep:leptos_axum",
    "ui_kit/ssr",
    "addons/ssr",
    "server/ssr",
]

