[package]
name = "lib_init"
version = "0.1.0"
edition = "2021"
description = "App initialization on client"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
front = { path = "../front", default-features = false, features = ["hydrate"] }
leptos = { workspace = true, features = [ "hydrate" ] }

console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
wasm-bindgen.workspace = true
