[package]
name = "ui_kit"
version = "0.1.0"
edition = "2021"
description = "A collection of UI components"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

leptos-use.workspace = true
stylance.workspace = true

[package.metadata.stylance]
output_file = "../target/stylance-output/ui_kit.css"
output_dir = "../target/"
extensions = [".css"]
class_name_pattern = "[name]"

[features]
default = []
hydrate = [
    "leptos/hydrate", 
    "leptos_meta/hydrate", 
    "leptos_router/hydrate"
]
ssr = [
    "leptos/ssr", 
    "leptos-use/ssr", 
    "leptos-use/axum", 
    "leptos_meta/ssr", 
    "leptos_router/ssr", 
    "dep:leptos_axum"
]