[package]
name = "ui_kit"
version = "0.1.0"
edition = "2021"
description = "A collection of UI components"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

addons = { path = "../addons" }
server = { path = "../server" }

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_reactive.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

leptos-use.workspace = true
stylance.workspace = true

[package.metadata.stylance]
output_file = "../target/stylance-output/ui_kit.css"
output_dir = "../target/"
extensions = [".css"]
class_name_pattern = "[name]"

[features]
default = []
hydrate = [
    "leptos/hydrate", 
    "leptos_meta/hydrate", 
    "leptos_router/hydrate",
    "leptos_reactive/hydrate",
    "addons/hydrate",
    "server/hydrate",
]
ssr = [
    "leptos/ssr", 
    "leptos-use/ssr", 
    "leptos-use/axum", 
    "leptos_meta/ssr", 
    "leptos_router/ssr", 
    "leptos_reactive/ssr",
    "dep:leptos_axum",
    "addons/ssr",
    "server/ssr",
]